add jpackage Maven plugin; add assembly plugin execution to zip jpackage image