@@ -55,6 +55,24 @@
 
     </dependencies>
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.github.akman</groupId>
+                    <artifactId>jpackage-maven-plugin</artifactId>
+                    <version>0.1.5</version>
+                    <configuration>
+                        <name>MyKafkaTool</name>
+                        <type>IMAGE</type>
+]                        <appversion>1.0</appversion>
+                        <dest>${project.build.directory}/MyKafkaTool-${my-kafka-tool.version}</dest>
+                        <input>${project.build.directory}/my-kafka-tool-launcher-${my-kafka-tool.version}</input>
+                        <mainjar>my-kafka-tool-launcher-${my-kafka-tool.version}.jar</mainjar>
+                        <javaoptions>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -XX:+UseZGC</javaoptions>o
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -89,6 +107,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <executions>
                     <execution>
+                        <id>assembly-dir</id>
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
@@ -96,9 +115,34 @@
                         <configuration>
                             <appendAssemblyId>false</appendAssemblyId>
                             <descriptors>
-                                <descriptor>src/main/assembly/assembly.xml</descriptor>
+                                <descriptor>src/main/assembly/assembly-dir.xml</descriptor>
                             </descriptors>
                         </configuration>
+                    </execution>
+                    <execution>
+                        <id>assembly-final-zip</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <descriptors>
+                                <descriptor>src/main/assembly/assembly-final-zip.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.github.akman</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jpackage</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
@@ -115,7 +159,7 @@
             <!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
             <!--                    </descriptorRefs>-->
             <!--                    <descriptors>-->
-            <!--                        <descriptor>src/main/assembly/assembly.xml</descriptor>-->
+            <!--                        <descriptor>src/main/assembly/assembly-dir.xml</descriptor>-->
             <!--                    </descriptors>-->
             <!--                    <appendAssemblyId>false</appendAssemblyId>-->
             <!--                </configuration>-->
@@ -129,6 +173,7 @@
             <!--                    </execution>-->
             <!--                </executions>-->
             <!--            </plugin>-->
+
         </plugins>
 
     </build>
